@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed a problem with the pusher and attractor something crashing client-side
+
 1.19-5.1.1:
 - Update to 1.19.4
 
